Fix downloading notebot songs not working
45▌