@@ -11,7 +11,6 @@ package bleach.hack.util;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
-import java.net.URL;
 import java.nio.file.Files;
 import java.util.Enumeration;
 import java.util.HashMap;
@@ -25,6 +24,7 @@ import org.apache.commons.io.IOUtils;
 
 import bleach.hack.BleachHack;
 import bleach.hack.util.file.BleachFileMang;
+import bleach.hack.util.file.BleachGithubReader;
 import net.minecraft.block.enums.Instrument;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.sound.PositionedSoundInstance;
@@ -36,7 +36,7 @@ public class NotebotUtils {
 	public static void downloadSongs(boolean log) {
 		try {
 			FileUtils.copyURLToFile(
-					new URL("https://github.com/BleachDrinker420/BH-resources/raw/master/notebot/songs.zip"),
+					BleachGithubReader.stringsToURI("notebot", "songs.zip").toURL(),
 					BleachFileMang.stringsToPath("notebot", "songs.zip").toFile());
 			ZipFile zip = new ZipFile(BleachFileMang.stringsToPath("notebot", "songs.zip").toFile());
 			Enumeration<? extends ZipEntry> files = zip.entries();
